--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -78,7 +78,7 @@ Bob will also see his indirect holdings in his Portfolio, with a *via Bobs Trust
 
 Go on the *Stakeholder* page, add you investor’s email address (at this point the shareholder does NOT receive any email). Then just click the invite button on the right-hand side. You can choose three access right levels.
 
-1. **Personal** The investor will be able to see her stake in her [portfolio](/features/investors/).
+1. **Personal** The investor will be able to see her stake in her [portfolio](/features/portfolio/).
 2. **View-only** View everything, but not able to edit.
 3. **Admin** Full access.
 
