--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -843,7 +843,7 @@ msgstr "Schweiz"
 
 #: src/layouts/index.jsx:95
 msgid "Takes too long to import your data? <0>We’ll do it for you.</0>"
-msgstr "Der Import der Daten ist mühsam? <0>Wir erledigen das für dich!</0>"
+msgstr "Der Import ist mühsam? <0>Wir erledigen das für dich!</0>"
 
 #: src/pages/about-us.jsx:116
 msgid "Team"
