fixes after Ben's feedback

--- a/src/markdown/blog/esop-ch.mdx
+++ b/src/markdown/blog/esop-ch.mdx
@@ -19,15 +19,15 @@ In Switzerland, there are two main ways to set up an employee participation plan
 A stock option is a right for the employee to buy a stock at an agreed price (strike price) on a future date (exercise date).
 
 ##### Tax
-No tax applies until the option gets exercised. Upon exercise, an income tax (typically 10–20%) applies on the difference between the stock's market value and the strike price (see *Good to know* below to find out how to determine these values). The graph below shows how much, at the end of the day, the employee receives for her options. The nice thing you can note here, is that if  you own stock, you will benefit of the Tax-free capital gain (specific to Switzerland) in the event that you sell your stock. Indeed, as stated above, the income tax only applies at the time of exercise and a sale of the company will result in a tax-free capital gain for everyone owning stock.
+No tax applies until the option gets exercised. Upon exercise, an income tax (typically 10–20%) applies on the difference between the stock's market value and the strike price (see *Good to know* below to find out how to determine these values). The graph below shows how much, at the end of the day, the employee receives for her options. The nice thing you can note here, is that if  you own stock, you will benefit of the tax-free capital gain (specific to Switzerland) in the event that you sell your stock. Indeed, as stated above, the income tax only applies at the time of exercise and a sale of the company will result in a tax-free capital gain for everyone owning stock.
 
 <Img src="options.png" caption="Legal text governing share registers in Switzerland" />
 
 ##### Admin
-You first set up a pool, called *bedingtes Kapital*. You have to announce it to the notary who will put it in the statutes of your company. Once you have started giving out options, you have to go once a year to the notary (at the latest 3 months after the end of the financial year) to announce all the options which were exercised, i.e. converted to stock, during that year.
+You first set up a pool, called *bedingtes Kapital*. You have to announce it to the notary who will put it in the statutes of your company. Once you have started giving out options, you have to go once a year to the notary (at the latest 3 months after the end of the financial year) to announce all the options which were exercised, i.e. converted to stock, during that year. Also, once the employee exercises his shares, he becomes a shareholder with all related rights immediately (such as participating to the general assembly).
 
 #### Phantom stock options
-A phantom stock option works exactly the same way as a stock option except it can never convert to actual stock.
+A phantom stock option works exactly the same way as a stock option except it can never convert to actual stock but instead are paid in cash.
 
 ##### Tax
 No tax is applied to phantom stock options until they are 'exercised', which in this case means 'paid in money'. The time of exercise is often set to be the sale of the company or the IPO. Similarly to stock options, an income tax applies on the amount paid in cash to the employee. On the graph below you can see that the difference with stock options is that the amount that is subject to taxation is much higher since in this case the holder of stock can't take advantage of the tax-free capital gain.
