link other pages

--- a/src/markdown/legal/terms.mdx
+++ b/src/markdown/legal/terms.mdx
@@ -107,11 +107,11 @@ This Section does not apply to any: (a) features or Services excluded from the S
 
 ### 5 Security and privacy
 
-Your privacy is important to us. Ledgy, therefore, implements strict security measures, including encryption during transmissions of Data and regular backups, to secure your Data against accidental loss, theft, or unauthorized access or disclosure. The following document is, by reference, part of this Agreement:
+Your privacy is important to us. Ledgy, therefore, implements [strict security measures](/security/), including encryption during transmissions of Data and regular backups, to secure your Data against accidental loss, theft, or unauthorized access or disclosure. The following document is, by reference, part of this Agreement:
 
-Our Privacy Policy which describes the types of Data we collect from you, how we use it, the legal basis for processing, and your rights.
+Our [Privacy Policy](/privacy/) which describes the types of Data we collect from you, how we use it, the legal basis for processing, and your rights.
 
-Our Data Processing Addendum if you qualify as the data controller. The Data Processing Addendum states the terms under which we process your Data on behalf of the data controller (typically the company whose equity we manage). In case we process your Data on behalf of a data controller, please directly contact the data controller for further information and requests relating to the processing of your Data.
+Our [Data Processing Addendum](/legal/dpa/) if you qualify as the data controller. The Data Processing Addendum states the terms under which we process your Data on behalf of the data controller (typically the company whose equity we manage). In case we process your Data on behalf of a data controller, please directly contact the data controller for further information and requests relating to the processing of your Data.
 
 ### 6 Your Use of the Services and Your Account Activity
 
