small wording fix

--- a/src/markdown/blog/esop-ch.mdx
+++ b/src/markdown/blog/esop-ch.mdx
@@ -27,7 +27,7 @@ No tax applies until the option gets exercised. Upon exercise, an income tax (ty
 You first set up a pool, called *bedingtes Kapital*. You have to announce it to the notary who will put it in the statutes of your company. Once you have started giving out options, you have to go once a year to the notary (at the latest 3 months after the end of the financial year) to announce all the options which were exercised, i.e. converted to stock, during that year. Also, once the employee exercises his shares, he becomes a shareholder with all related rights immediately (such as participating to the general assembly).
 
 #### Phantom stock options
-A phantom stock option works exactly the same way as a stock option except it can never convert to actual stock but instead are paid in cash.
+A phantom stock option works the same way as a stock option except it can never convert to actual stock but instead are paid in cash.
 
 ##### Tax
 No tax is applied to phantom stock options until they are 'exercised', which in this case means 'paid in money'. The time of exercise is often set to be the sale of the company or the IPO. Similarly to stock options, an income tax applies on the amount paid in cash to the employee. On the graph below you can see that the difference with stock options is that the amount that is subject to taxation is much higher since in this case the holder of stock can't take advantage of the tax-free capital gain.
