add privacy policy

--- a/src/markdown/legal/cookie-policy.mdx
+++ b/src/markdown/legal/cookie-policy.mdx
@@ -4,7 +4,7 @@ title: "Cookies Policy"
 description: "Cookies policy at Ledgy"
 ---
 
-### 1 Cookies
+### Cookies
 
 This website (the **“Website”**) uses cookies to improve the user experience and ensure that it is functioning effectively. Cookies are small text files that are downloaded to your device by visiting the Website. We use both session cookies (which expire once you close your web browser) and persistent cookies (which stay on your device for a set period of time or until you delete them). You may change your browser settings to delete and/or block cookies.
 We use the following types of cookies for the purposes explained:
@@ -24,9 +24,8 @@ We use the following types of cookies for the purposes explained:
   </tr>
 </table>
 
-### 2 Tracking System
 
-#### 2.1 Google Analytics and other statistics providers
+### Google Analytics and other statistics providers
 
 We may employ a tracking system such as **Google Analytics** (including Universal Analytics), **Google Tag Manager**, web analysis services of Google Inc. (**“Google”**), or similar services on our Website. These are services provided by third parties, which may be located in any country worldwide (in the case of Google Analytics, Google LLC is in the U.S., [www.google.com](https://www.google.com)) and which allow us to measure and evaluate the use of our Website (on an anonymized basis). For this purpose, permanent cookies are used, which are set by the service provider.
 
@@ -36,10 +35,13 @@ The information generated through the cookies about the utilization of this webs
 
 Ledgy reserves the right, if required, to employ other tracking systems than those named in the section on tracking data for the specified purpose.
 
-### 3 Contact information
-
-If you have any questions or comments relating to this Cookie Policy, please contact us at [contact@ledgy.com](mailto:contact@ledgy.com).
-
 ### Modifications and Additions to this Cookies Policy
 
 We reserve the right to update and change this Cookie Policy from time to time to reflect any changes to how we process your Personal Data or changing legal requirements. The effective date of our Cookie Policy is posted above, and we encourage you to visit our Website periodically to stay informed about our cookie practices.
+
+### Contact information
+
+If you have any questions relating to this Cookie Policy, please contact us at:
+> Ledgy AG<br />
+> Email: [contact@ledgy.com](mailto:contact@ledgy.com)<br />
+> Phone: +41 (0) 44 585 21 23
