fixed cover image

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -3,7 +3,7 @@ date: "2019-03-31"
 author: "yoko"
 title: "Tax on equity in Switzerland"
 description: "A startup's equity has a certain value and thus needs to be declared to the tax office yearly. Here's a mini guide of how to communicate the equity's value to your startup's investors and employees."
-coverImage: tax-ch/tax-ch-cover.jpg
+coverImage: tax-ch/tax-cover.jpg
 images:
   - tax-ch/viu.jpg
   - tax-ch/HoldingConfirmation.png
