small fixes after Timo's review

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -2,23 +2,23 @@
 date: "2019-03-31"
 author: "yoko"
 title: "Tax on equity in Switzerland"
-description: "A startup's equity has a certain value and thus needs to be declared to the tax office yearly. Here's a mini guide of how to communicate the equity's value to your startup's investors and employees."
+description: "A startup’s equity has a certain value and thus needs to be declared to the tax office yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees."
 coverImage: tax-ch/tax-cover.jpg
 images:
   - tax-ch/viu.jpg
   - tax-ch/HoldingConfirmation.png
 ---
 
-A startup's equity has a certain value and thus needs to be declared to the tax office yearly. Here's a mini guide of how to communicate the equity's value to your startup's investors and employees.
-
-<Img src="HoldingConfirmation.png" align="right" size="300" caption="A holding confirmation as downloadable on Ledgy" />
+A startup’s equity has a certain value and thus needs to be declared to the tax office yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees.
 
 #### Stock
 In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.<br/>
-How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) (future updates to this guideline can be found [here](http://www.steuerkonferenz.ch/?Dokumente:Kreisschreiben)). The startup's board has to officially decide which
+How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) (future updates to this guideline can be found [here](http://www.steuerkonferenz.ch/?Dokumente:Kreisschreiben)). The startup’s board has to officially decide which
 calculation method among the recognized ones will be taken. To be a 100% sure that the chosen formula will also be accepted by the tax office, the startup can also send the chosen calculation to the tax office for an official approval, called ***Steuerruling***. <br/>
-The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity's value at a very low price.
+The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price.
 This has been established to encourage startups in the canton of Zurich.
+
+<Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
 
 #### Stock options
 What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees and send a holding confirmation to your investors. For exercised options: see *Stock* section.
@@ -29,10 +29,10 @@ Similarly to stock options: Number of phantom stock options granted with value: 
 <Img src="viu.jpg" align="right" size="300" />
 
 #### A concrete example with VIU Eyeware using Ledgy
-VIU has stock and phantom stock options for employees. We're proud that Ledgy helps making VIU's process of sending holding confirmations easier.
+[VIU](https://shopviu.com) has stock and phantom stock options for employees. We’re proud that Ledgy helps making VIU’s process of sending holding confirmations easier.
 Indeed, instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders.
 <br/>
 
 
 
-_***Thanks*** to Monica Maurer from ACT AG for answering our questions about how to calculate the tax value of startups equity._
+_***Thanks*** to Monica Maurer from [ACT AG](https://www.act-ag.ch) for answering our questions about how to calculate the tax value of startups equity._
