--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -1,22 +1,21 @@
 ---
 date: "2019-03-31"
 author: "yoko"
-title: "Tax on equity in Switzerland"
-description: "A startup’s equity has a certain value and thus needs to be declared to the tax office yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees."
+title: "Tax on startups shares in Switzerland"
+description: "A startup’s equity has a certain value and thus needs to be declared by the shareholders in their tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees."
 coverImage: tax-ch/tax-cover.jpg
 images:
   - tax-ch/viu.jpg
   - tax-ch/HoldingConfirmation.png
 ---
 
-A startup’s equity has a certain value and thus needs to be declared to the tax office yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees.
+A startup’s shares has a certain value and thus needs to be declared by the shareholders in their tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
 
 #### Stock
 In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.<br/>
-How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) (future updates to this guideline can be found [here](http://www.steuerkonferenz.ch/?Dokumente:Kreisschreiben)). The startup’s board has to officially decide which
-calculation method among the recognized ones will be taken. To be a 100% sure that the chosen formula will also be accepted by the tax office, the startup can also send the chosen calculation to the tax office for an official approval, called ***Steuerruling***. <br/>
-The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price.
-This has been established to encourage startups in the canton of Zurich.
+How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf). 
+The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price. Indeed you only need to declare the asset value (_Substanzwert_), which is simply given by your startup’s net asset (_Eigenkapital_). This has been established to encourage startups in the canton of Zurich.<br/>
+One more thing: If your startup is already giving out dividends, don’t forget about the qualified stake rule (_qualifizierte Beteiligung_) in case the shareholder holds more than 10% of the company's stock ([Here](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-35-1.html) are more informations for the canton of Zurich.)
 
 <Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
 
@@ -30,9 +29,11 @@ Similarly to stock options: Number of phantom stock options granted with value: 
 
 #### A concrete example with VIU Eyeware using Ledgy
 [VIU](https://shopviu.com) has stock and phantom stock options for employees. We’re proud that Ledgy helps making VIU’s process of sending holding confirmations easier.
-Indeed, instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders.
+We've asked Peter Kaeser, cofounder and COO at VIU about how he uses Ledgy. Here's what he said:
+"Instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders." <br/>
+You can have a look at such a holding confirmation [on the Ledgy demo](https://demo.ledgy.com/XihSjPeB9BeP86TK2/stakeholders) when clicking on _download holding confirmation_.
 <br/>
 
 
 
-_***Thanks*** to Monica Maurer from [ACT AG](https://www.act-ag.ch) for answering our questions about how to calculate the tax value of startups equity._
+_***Thanks*** to Monica Maurer from [Audit & Tax AG](https://www.act-ag.ch) for answering our questions about how to calculate the tax value of startups equity._
