added link to examples of Bescheinigung Mitarbeiterbeteiligung

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -13,14 +13,14 @@ A startup’s shares has a certain value and thus needs to be declared by the sh
 
 #### Stock
 In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.<br/>
-How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf). 
+How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf).
 The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price. Indeed you only need to declare the asset value (_Substanzwert_), which is simply given by your startup’s net asset (_Eigenkapital_). This has been established to encourage startups in the canton of Zurich.<br/>
 One more thing: If your startup is already giving out dividends, don’t forget about the qualified stake rule (_qualifizierte Beteiligung_) in case the shareholder holds more than 10% of the company's stock ([Here](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-35-1.html) are more informations for the canton of Zurich.)
 
 <Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
 
 #### Stock options
-What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees and send a holding confirmation to your investors. For exercised options: see *Stock* section.
+What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees, in a separate sheet as shown in [these examples](https://www.estv.admin.ch/dam/estv/de/dokumente/bundessteuer/kreisschreiben/2004/1-037-D-2012_Anhang3.pdf.download.pdf/1-037-D-2012-d_Anhang3.pdf) by the Swiss tax office. Send a holding confirmation to your investors. For exercised options: see *Stock* section.
 
 #### Phantom stock options
 Similarly to stock options: Number of phantom stock options granted with value: 0. Declare it alongside of the salary statement for employees and send a holding confirmation to your investors.
