--- a/src/markdown/legal/privacy-policy.mdx
+++ b/src/markdown/legal/privacy-policy.mdx
@@ -4,7 +4,7 @@ title: "Privacy Policy"
 description: "Privacy Policy at Ledgy"
 ---
 
-We (**“Ledgy”**, **“we”**, **“our”** or **“us”**) understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
+**We** (“Ledgy”, “we”, “our” or “us”) **understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us.** We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
 
 This Privacy Policy explains the types of personal data we process (Section 1), the legal grounds on which we process it (Section 2), how we collect (Section 3) and protect that information (Section 4) and where we store it/who we share it with (Section 5) in the context of our services ([app.ledgy.com](https://app.ledgy.com) or the **“Services”**) and the Ledgy website ([www.ledgy.com](https://www.ledgy.com) or the **“Website”**), as well as the rights you have (Section 6). For information regarding the cookies we use, please refer to our [Cookie Policy](/legal/cookie-policy/).
 
@@ -131,6 +131,14 @@ Personal data may be obtained from public registers (such as commercial register
 **Business customers**<br />
 Our customers may engage us to perform professional services which involve them sharing personal data they control with us as part of that engagement.
 
+### 4 Personal data security
+
+We have implemented technical and organizational measures in an effort to safeguard the Personal Data in our custody and control.
+
+A list of measures can be found on our [Security](/security/) page.
+
+While we endeavor to always protect our systems, sites, operations, and information against unauthorized access, use, modification, and disclosure, due to the inherent nature of the Internet as an open global communications vehicle and other risk factors, we cannot guarantee that any information, during transfer or storage, will be absolutely safe from interception.
+
 
 ### 5 Storage, disclosure to third parties and cross-border transfers
 
@@ -143,7 +151,7 @@ The Cap Table Data is stored in a secure data center in France. The data center 
 
 ##### General Personal Data (Switzerland, France, USA)
 **Disclosure to third parties**<br />
-In the context of our business activities and in line with the Purposes set out in Section 3 and the applicable data protection laws, we may transfer General Personal Data to third parties (together with the **“Recipients”**) to process for us. A list of the potential Recipients may be found here. The list may not be up to date and we reserve the right to change it at any time.
+In the context of our business activities and in line with the Purposes set out in Section 3 and the applicable data protection laws, we may transfer General Personal Data to third parties (together with the **“Recipients”**) to process for us.
 
 **Cross-border transfers**<br />
 General Personal Data may be transferred to the countries where our Recipients are located.
@@ -172,7 +180,7 @@ If you have provided your consent to the collection, processing, and transfer of
 
 Once we have received notification that you have withdrawn your consent, we will no longer process your information for the purpose(s) to which you originally consented unless there is another legal ground for the processing. To stop receiving emails from us, please click on the **“unsubscribe”** link in the email you received from us or use our contact form.
 
-##### Right to erasure of your Personal Data
+##### Right to the erasure of your Personal Data
 You have the right to request that we delete your Personal Data when it is no longer necessary for the Purposes for which it was collected, or when it was unlawfully processed.
 
 ##### Right to restriction of processing
